@@ -1,4 +1,15 @@
 20140721
+ - OpenBSD CVS Sync
+   - millert@cvs.openbsd.org 2014/07/15 15:54:15
+     [forwarding.sh multiplex.sh]
+     Add support for Unix domain socket forwarding.  A remote TCP port
+     may be forwarded to a local Unix domain socket and vice versa or
+     both ends may be a Unix domain socket.  This is a reimplementation
+     of the streamlocal patches by William Ahern from:
+         http://www.25thandclement.com/~william/projects/streamlocal.html
+     OK djm@ markus@
+
+20140721
  - (dtucker) [cipher.c openbsd-compat/openssl-compat.h] Restore the bits
    needed to build AES CTR mode against OpenSSL 0.9.8f and above.  ok djm
  - (dtucker) [regress/unittests/sshkey/
